=====================================
2010-04-03T18:15:36.151833Z ptl-1_034
=====================================

  2010-04-03 17:46:46 (r2854) by rcaputo
  poe-test-loops/lib/POE/Test/Loops.pm M

    Bump PTL revision for release.

  2010-03-24 06:52:46 (r2852) by apocal
  poe M; polo-gtk/Makefile.PL M; polo-tk M; polo-event M; poe-test-loops
  M; polo-gtk M

    Set svn:ignore for: META.yml CHANGES run_network_tests PoLo-Gtk
    forgot to clean run_network_tests 

  2010-03-23 17:27:32 (r2849) by rcaputo
  poe-test-loops/MANIFEST M;
  poe-test-loops/lib/POE/Test/Loops/z_rt53302_fh_watchers.pm R;
  poe-test-loops/lib/POE/Test/Loops/z_rt53302_fh_watchers_slow.pm D

    Replace z_rt53302_fh_watchers.pm with z_rt53302_fh_watchers_slow.pm.
    The non-slow one was broken since its client shuts down without
    waiting for the server's response. 

  2010-03-22 06:00:17 (r2846) by rcaputo
  poe-test-loops/lib/POE/Test/Loops.pm M;
  poe-test-loops/bin/poe-gen-tests M

    Support legal =for and =begin POD syntax for skip_tests(), in
    addition to the previous =for/=cut syntax that caused skip_tests() to
    appear in everyone's perldoc. Document the change. Deprecate the bad
    syntax, which won't be a terrible burden since everyone probably
    wanted to migrate away from it anyway. 

  2010-03-22 02:54:39 (r2845) by apocal
  poe-test-loops/lib/POE/Test/Loops.pm M;
  poe-test-loops/bin/poe-gen-tests M

    Add optional one-line =for poe_tests syntax to hide it from POD
    formatters.
    
    Add example from POE::Loop::Glib that uses the new syntax. 

  2010-03-11 06:57:11 (r2839) by apocal
  poe-test-loops/MANIFEST M; poe-test-loops/lib/POE/Test/Loops/00_info.pm
  A

    Added the 00_info test for better debugging 

  2010-03-11 05:28:23 (r2838) by apocal
  poe-test-loops/MANIFEST M;
  poe-test-loops/lib/POE/Test/Loops/z_rt53302_fh_watchers.pm A;
  poe-test-loops/lib/POE/Test/Loops/z_rt53302_fh_watchers_slow.pm A

    Add new tcp connection test for RT#53302 
