@@ -1,14 +1,25 @@
 --- #YAML:1.0
-name:                POE-Test-Loops
-version:             1.034
-abstract:            POE::Loop test suite
-license:             perl
-author:              
+name:               POE-Test-Loops
+version:            1.035
+abstract:           POE::Loop test suite
+author:
     - Rocco Caputo <rcaputo@cpan.org>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Test::More:                    0
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Test::More:  0
+resources:
+    license:     http://dev.perl.org/licenses/
+    repository:  https://poe.svn.sourceforge.net/svnroot/poe/trunk/poe-test-loops
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
